--- a/index.html
+++ b/index.html
@@ -86,6 +86,32 @@
 <br>
 
   <h3><b>Team Profile</b></h3>
+  <b>David Hucklebridge</b>
+  <a href="https://www.16personalities.com/intj-personality">Architect</a>
+  I have the Architect personality, which means that I am high in the Introverted (71%), Intuitive (54%), Thinking (55%), and <br>
+  Judging (53%) personality traits.  I also have a Turbulent (74%) personality trait.  As an Architect I am high in creativity <br>
+  rationality.<br>
+
+  <a href="http://www.educationplanner.org/students/self-assessments/learning-styles-quiz.shtml?event=results&A=9&V=8&T=3">What's Your Learning Style? The Results</a>
+  <ul>
+    <li>Auditory: 45%</li>
+    <li>Visual: 40%</li>
+    <li>Tactile: 15%</li>
+  </ul>
+  As an auditory learner, I perform best by talking over issues, and listening to others.  However, since my Auditory and Visual <br>
+  scores are rather close, I can also learn by reading or viewing pictures.
+
+  <a href="https://www.truity.com/test-results/bigfive/17315/22274855">The Big Five Personality Test</a>
+  <ul>
+    <li>Openness: 71%</li>
+    <li>Conscientiousness: 54%</li>
+    <li>Extraversion: 23%</li>
+    <li>Agreeableness: 58%</li>
+    <li>Neuroticism: 71%</li>
+  </ul>
+  The results of this test am a highly creative person, who can think of subject in a abtract manner (Openness). I am a peacemaker, and will try to put <br>
+  the needs and views of others before my own (Conscientiousness). However, I am highly critical and I am highly susceptible to <br>
+  negative emotions (Neuroticism).
 
 <br>
   <h1><b>Ideal Jobs</b></h1>
