--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   rationality.<br>
   <br>
 
-  <a href="http://www.educationplanner.org/students/self-assessments/learning-styles-quiz.shtml?event=results&A=9&V=8&T=3">What's Your Learning Style? The Results</a>
+  <a href="http://www.educationplanner.org/students/self-assessments/learning-styles-quiz.shtml?event=results&A=9&V=8&T=3">What's Your Learning Style? The Results</a><br>
   <ul>
     <li>Auditory: 45%</li>
     <li>Visual: 40%</li>
@@ -103,7 +103,7 @@
   scores are rather close, I can also learn by reading or viewing pictures.
   <br>
 
-  <a href="https://www.truity.com/test-results/bigfive/17315/22274855">The Big Five Personality Test</a>
+  <a href="https://www.truity.com/test-results/bigfive/17315/22274855">The Big Five Personality Test</a><br>
   <ul>
     <li>Openness: 71%</li>
     <li>Conscientiousness: 54%</li>
