--- a/index.html
+++ b/index.html
@@ -29,12 +29,24 @@
   2021, so have only just started my IT journey.<br>
 <br>
 
-  <h3><b>Name:</b></h3> Kias Henry
-  <h3><b>Student Number:</b></h3> s3564324
-  <h3><b>Background:</b></h3>
-  <h3><b>Hobbies:</b></h3>
-  <h3><b>IT Interests:</b></h3>
-  <h3><b>IT Experience:</b></h3>
+<h3><b>Name:</b></h3> Kias Henry
+<h3><b>Student Number:</b></h3> s3564324
+<h3><b>Background:</b></h3>
+<p>I was born in Proserpine, near Airlie Beach up north, in an english speaking household but our family moved down to Brisbane <br>
+  when I was asround 3.  A interesting fact about me is I have both been homeless for several years in the past, as well as the <br>
+  CEO of an web company.  I did half of an IT degree @ Griffith University in Brisbane when I finished school, but left early to <br>
+  start a web company with a friend.</p>
+<h3><b>Hobbies:</b></h3>
+<p>Photoshop, Chess, Walking my dog, researching latest science, cooking
+<h3><b>IT Interests:</b></h3>
+<p>I started getting interested in computers after being given an Amiga 500 for mowing one of my mums friend's lawns a few times and <br>
+  it came with about 500 games on giant floppy discs.  It was games originally that got me interested, but s I became a teenager I <br>
+  was most impressed with discussion boards, internet relay chat and the potential for the internet to connect me with like minded <br>
+  indiviuals all over the world.  I became obsessed with computers around 13-13 years of age.</p>
+<h3><b>IT Experience:</b></h3>
+<p>I did IT in years 11 & 12 and then started a Bachelor of IT at Griffith university in Brisbane.  I did half of this degree but <br>
+  left to start an internet company.  I stopped using computers again till I was mid 20s and have had an active interest in them <br>
+  since.  I have worked on several database driven websites but feel I have quite a basic knowledge of website design.</p>
 <br>
 
   <h3><b>Name:</b></h3> Cody Sadler
