--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
+<!DOCTYPE html>
 <html>
 <head>
-
+<style media="screen">
+body {background-color: DarkSlateGray;}
+</style>
 </head>
+
 
 <body>
   <h1><b>Team Profile</b></h1>
