--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
 <style media="screen">
 body {background-color: DarkSlateGray;}
+h1 {color: White}
+h2 {color: White}
+h3 {color: White}
+li {color: White}
+p {color: White}
 </style>
 </head>
 
