--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@ p {color: White}
 <body>
   <h1><b>Team Profile</b></h1>
 
-  <h2><b>Team Name:</b></h2> The Hypervisors
+  <h2><b>Team Name:</b></h2> <p>The Hypervisors</p>
 
   <h2><b>Personal Information</b></h2>
-
 <br>
 
-  <h3><b>Name:</b></h3> David Hucklebridge
-  <h3><b>Student Number:</b></h3> s3924012
+  <h3><b>Name:</b></h3> <p>David Hucklebridge</p>
+  <h3><b>Student Number:</b></h3> <p>s3924012</p>
   <h3><b>Background:</b></h3>
   <b>Nationality:</b> Australian<br>
   <b>Culture:</b> Australian<br>
@@ -31,22 +30,22 @@ p {color: White}
         <li>Certificate III in Information, Digital Media and Technology</li>
         <li>Certificate III in Transport and Road Distribution(Road Transport)</li>
   </ul>
-  <h3><b>Hobbies:</b></h3> Watching Rugby League and catching up with friends
-  <h3><b>IT Interests:</b></h3> I choose to study IT after getting interested in creating mobile applications.  I am also <br>
-  looking to learn how to code video games, mainly RPGs, and idle games.
-  <h3><b>IT Experience:</b></h3> I only completed the Certificate III in Information, Digital Media and Technology in April <br>
-  2021, so have only just started my IT journey.<br>
+  <h3><b>Hobbies:</b></h3> <p>Watching Rugby League and catching up with friends</p>
+  <h3><b>IT Interests:</b></h3> <p>I choose to study IT after getting interested in creating mobile applications.  I am also <br>
+  looking to learn how to code video games, mainly RPGs, and idle games.</p>
+  <h3><b>IT Experience:</b></h3> <p>I only completed the Certificate III in Information, Digital Media and Technology in April <br>
+  2021, so have only just started my IT journey.<br></p>
 <br>
 
-<h3><b>Name:</b></h3> Kias Henry
-<h3><b>Student Number:</b></h3> s3564324
+<h3><b>Name:</b></h3> <p>Kias Henry</p>
+<h3><b>Student Number:</b></h3> <p>s3564324</p>
 <h3><b>Background:</b></h3>
 <p>I was born in Proserpine, near Airlie Beach up north, in an english speaking household but our family moved down to Brisbane <br>
-  when I was asround 3.  A interesting fact about me is I have both been homeless for several years in the past, as well as the <br>
+  when I was around 3.  A interesting fact about me is I have both been homeless for several years in the past, as well as the <br>
   CEO of an web company.  I did half of an IT degree @ Griffith University in Brisbane when I finished school, but left early to <br>
   start a web company with a friend.</p>
 <h3><b>Hobbies:</b></h3>
-<p>Photoshop, Chess, Walking my dog, researching latest science, cooking
+<p>Photoshop, Chess, Walking my dog, researching latest science, and cooking.</p>
 <h3><b>IT Interests:</b></h3>
 <p>I started getting interested in computers after being given an Amiga 500 for mowing one of my mums friend's lawns a few times and <br>
   it came with about 500 games on giant floppy discs.  It was games originally that got me interested, but s I became a teenager I <br>
@@ -58,48 +57,8 @@ p {color: White}
   since.  I have worked on several database driven websites but feel I have quite a basic knowledge of website design.</p>
 <br>
 
-  <h3><b>Name:</b></h3> Cody Sadler
-  <h3><b>Student Number:</b></h3> s3923221
-  <h3><b>Background:</b></h3>
-  <h3><b>Hobbies:</b></h3>
-  <h3><b>IT Interests:</b></h3>
-  <h3><b>IT Experience:</b></h3>
-<br>
-
-  <h3><b>Name:</b></h3>
-  <h3><b>Student Number:</b></h3>
-  <h3><b>Background:</b></h3>
-  <h3><b>Hobbies:</b></h3>
-  <h3><b>IT Interests:</b></h3>
-  <h3><b>IT Experience:</b></h3>
-<br>
-
-  <h3><b>Name:</b></h3>
-  <h3><b>Student Number:</b></h3>
-  <h3><b>Background:</b></h3>
-  <h3><b>Hobbies:</b></h3>
-  <h3><b>IT Interests:</b></h3>
-  <h3><b>IT Experience:</b></h3>
-<br>
-
-  <h3><b>Name:</b></h3>
-  <h3><b>Student Number:</b></h3>
-  <h3><b>Background:</b></h3>
-  <h3><b>Hobbies:</b></h3>
-  <h3><b>IT Interests:</b></h3>
-  <h3><b>IT Experience:</b></h3>
-<br>
-
-  <h3><b>Name:</b></h3>
-  <h3><b>Student Number:</b></h3>
-  <h3><b>Background:</b></h3>
-  <h3><b>Hobbies:</b></h3>
-  <h3><b>IT Interests:</b></h3>
-  <h3><b>IT Experience:</b></h3>
-<br>
-
-  <h3><b>Name:</b></h3>
-  <h3><b>Student Number:</b></h3>
+  <h3><b>Name:</b></h3> <p>Cody Sadler</p>
+  <h3><b>Student Number:</b></h3> <p>s3923221</p>
   <h3><b>Background:</b></h3>
   <h3><b>Hobbies:</b></h3>
   <h3><b>IT Interests:</b></h3>
@@ -144,14 +103,17 @@ p {color: White}
   a good understanding of common game technologies, processes and software development, such as Rendering pipelines (renders a <br>
   3D scene for a 2d screen), Physics, AI, and Online multiplayer.  They also need the ability to work independently and <br>
   problem-solve issues using documentation and existing processes and codebases, rapidly prototype and produce the final code.
-
 <br>
+
   <h1><b>Tools</b></h1>
-
+  <b>Group Website:</b> <a href="https://rmit-group-a2s1-hypervisors.github.io/TheHypervisors/">The Hypervisors</a>
+  <b>Group's Git Repository:</b> <a href="https://github.com/RMIT-Group-A2S1-Hypervisors/TheHypervisors/tree/gh-pages">RMIT-Group-A2S1-Hypervisors</a>
 <br>
+
   <h1><b>Industry Data</b></h1>
 
 <br>
+
   <h1><b>IT Work</b></h1>
   <a href="https://www.youtube.com/watch?v=nZh_ue1Nw_k">A Day as an Indie Game Developer</a>
   This video shows what Karl, an Indie Game Developer with a YouTube channel called ThinMatrix, does during a day at work.  He <br>
