--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 <style media="screen">
-body {background-color: DarkSlateGray;}
+body {background-color: LightSlateGray;}
 h1 {color: White}
 h2 {color: White}
 h3 {color: White}
-li {color: White}
 p {color: White}
+li {color: White}
+b {color: White}
 </style>
 </head>
 
