--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 <style media="screen">
 body {background-color: LightSlateGray;}
-h1 {color: White}
-h2 {color: White}
-h3 {color: White}
-p {color: White}
-li {color: White}
-b {color: White}
+h1 {color: WhiteSmoke}
+h2 {color: WhiteSmoke}
+h3 {color: WhiteSmoke}
+p {color: WhiteSmoke}
+li {color: WhiteSmoke}
+b {color: WhiteSmoke}
 </style>
 </head>
 
@@ -24,8 +24,8 @@ b {color: White}
   <h3><b>Name:</b></h3> <p>David Hucklebridge</p>
   <h3><b>Student Number:</b></h3> <p>s3924012</p>
   <h3><b>Background:</b></h3>
-  <b>Nationality:</b> Australian<br>
-  <b>Culture:</b> Australian<br>
+  <b>Nationality:</b> <p>Australian</p><br>
+  <b>Culture:</b> <p>Australian</p><br>
   <b>Education:</b>
   <ul>
         <li>Certificate III in Information, Digital Media and Technology</li>
@@ -65,8 +65,8 @@ b {color: White}
   <h3><b>Team Profile</b></h3>
   <b>David Hucklebridge</b>
   <a href="https://www.16personalities.com/intj-personality">Architect</a><br>
-  I have the Architect personality, which means that I am high in the Introverted (71%), Intuitive (54%), Thinking (55%), and Judging (53%) personality traits.  I also have a Turbulent (74%) <br>
-  personality trait.  As an Architect I am high in creativity rationality.<br>
+  <p>I have the Architect personality, which means that I am high in the Introverted (71%), Intuitive (54%), Thinking (55%), and Judging (53%) personality traits.  I also have a Turbulent (74%) <br>
+  personality trait.  As an Architect I am high in creativity rationality.<p><br>
   <br>
 
   <a href="http://www.educationplanner.org/students/self-assessments/learning-styles-quiz.shtml?event=results&A=9&V=8&T=3">What's Your Learning Style? The Results</a><br>
@@ -75,7 +75,8 @@ b {color: White}
     <li>Visual: 40%</li>
     <li>Tactile: 15%</li>
   </ul>
-  As an auditory learner, I perform best by talking over issues, and listening to others.  However, since my Auditory and Visual scores are rather close, I can also learn by reading or viewing pictures.
+  <p>As an auditory learner, I perform best by talking over issues, and listening to others.  However, since my Auditory and Visual scores are rather close, I can also learn by reading or viewing <br>
+    pictures.</p><br>
   <br>
 
   <a href="https://www.truity.com/test-results/bigfive/17315/22274855">The Big Five Personality Test</a><br>
@@ -86,16 +87,16 @@ b {color: White}
     <li>Agreeableness: 58%</li>
     <li>Neuroticism: 71%</li>
   </ul>
-  The results of this test am a highly creative person, who can think of subject in a abtract manner (Openness). I am a peacemaker, and will try to put the needs and views of others before my own <br>
-  (Conscientiousness). However, I am highly critical and I am highly susceptible to negative emotions (Neuroticism).
+  <p>The results of this test am a highly creative person, who can think of subject in a abtract manner (Openness). I am a peacemaker, and will try to put the needs and views of others before my own <br>
+  (Conscientiousness). However, I am highly critical and I am highly susceptible to negative emotions (Neuroticism).</p>
   <br>
 
 <br>
   <h1><b>Ideal Jobs</b></h1>
   <a href="https://au.linkedin.com/jobs/view/gameplay-programmer-at-gameloft-2746329876?refId=gsMP5X4f22cgwEKk5VUh2A%3D%3D&trackingId=mM9zF%2FDBzc3aGyAXy5We9Q%3D%3D&position=7&pageNum=0&trk=public_jobs_jserp-result_search-card">Gameplay Programmer</a>
-  A Gameplay Programmer needs to have a good understanding of programming languages (C++, C#, GML, Python), as well as having a good understanding of common game technologies, processes and software <br>
-  development, such as Rendering pipelines (renders a 3D scene for a 2d screen), Physics, AI, and Online multiplayer.  They also need the ability to work independently and problem-solve issues using <br>
-  documentation and existing processes and codebases, rapidly prototype and produce the final code.
+  <p>A Gameplay Programmer needs to have a good understanding of programming languages (C++, C#, GML, Python), as well as having a good understanding of common game technologies, processes and <br>
+    software development, such as Rendering pipelines (renders a 3D scene for a 2d screen), Physics, AI, and Online multiplayer.  They also need the ability to work independently and problem-solve <br>
+    issues using documentation and existing processes and codebases, rapidly prototype and produce the final code.</p>
 <br>
 
   <h1><b>Tools</b></h1>
@@ -109,8 +110,8 @@ b {color: White}
 
   <h1><b>IT Work</b></h1>
   <a href="https://www.youtube.com/watch?v=nZh_ue1Nw_k">A Day as an Indie Game Developer</a>
-  This video shows what Karl, an Indie Game Developer with a YouTube channel called ThinMatrix, does during a day at work.  He is currently developing a city-builder game. He also developed the <br>
-  nature-themed sandbox game Equilinox which is available on Steam.
+  <p>This video shows what Karl, an Indie Game Developer with a YouTube channel called ThinMatrix, does during a day at work.  He is currently developing a city-builder game. He also developed the <br>
+  nature-themed sandbox game Equilinox which is available on Steam.</p>
   <a href="https://store.steampowered.com/app/853550/Equilinox/">Equilinox</a>
 
   <ul>
