--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <style media="screen">
 body {background-color: LightSlateGray;}
+div {margin: auto;}
 h1 {color: WhiteSmoke}
 h2 {color: WhiteSmoke}
 h3 {color: WhiteSmoke}
@@ -14,6 +15,7 @@ b {color: WhiteSmoke}
 
 
 <body>
+  <div>
   <h1><b>Team Profile</b></h1>
 
   <h2><b>Team Name:</b></h2> <p>The Hypervisors</p>
@@ -369,7 +371,7 @@ b {color: WhiteSmoke}
   YoYo Games 2021, GMS2 required SDKs, YoYo Games, viewed 19 September 2021, <https://help.yoyogames.com/hc/en-us/articles/227860547-GMS2-Required-SDKs>.
   </p>
 
-
+</div>
 </body>
 
 </html>
