--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <style media="screen">
 body {background-color: LightSlateGray;}
-div {margin: auto;}
+div {margin-left: : 20px;}
 h1 {color: WhiteSmoke}
 h2 {color: WhiteSmoke}
 h3 {color: WhiteSmoke}
