--- a/index.html
+++ b/index.html
@@ -2,14 +2,8 @@
 <html>
 <head>
 <style media="screen">
-body {background-color: LightSlateGray;}
+body {background-color: Azure;}
 div {margin-left: : 20px;}
-h1 {color: WhiteSmoke}
-h2 {color: WhiteSmoke}
-h3 {color: WhiteSmoke}
-p {color: WhiteSmoke}
-li {color: WhiteSmoke}
-b {color: WhiteSmoke}
 </style>
 </head>
 
