--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <style media="screen">
-body {background-color: AliceBlue;}
+body {background-color: Gainsboro;}
 div {margin-left: : 20px;}
 </style>
 </head>
