--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <style media="screen">
 body {background-color: Gainsboro;}
-div {margin-left: : 20px;}
+div {padding-left: : 20px;}
 </style>
 </head>
 
