--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
 <style media="screen">
 body {background-color: Gainsboro;}
-div {padding-left: : 100px;}
+div {
+  margin-left: : 50px;
+  width: auto;
+}
 </style>
 </head>
 
