--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ div {
 <br>
 
   <h1><b>Tools</b></h1>
-  <b>Group Website:</b> <a href="https://rmit-group-a2s1-hypervisors.github.io/TheHypervisors/">The Hypervisors</a>
+  <b>Group Website:</b> <a href="https://rmit-group-a2s1-hypervisors.github.io/TheHypervisors/">The Hypervisors</a><br>
   <b>Group's Git Repository:</b> <a href="https://github.com/RMIT-Group-A2S1-Hypervisors/TheHypervisors/tree/gh-pages">RMIT-Group-A2S1-Hypervisors</a>
 <br>
 
