--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <style media="screen">
 body {background-color: Gainsboro;}
 div {
+  text-align: center;
   margin-left: : 50px;
   width: auto;
 }
