--- a/index.html
+++ b/index.html
@@ -337,36 +337,39 @@ div {
 
   <h1>References</h1>
   <p>
-  Akamai 2019, The 4 number-one ways to protect your game from hackers, Venture Beat, viewed 11 October 2021 <br>
-   <https://venturebeat.com/2019/10/29/the-4-number-one-ways-to-protect-your-game-from-hackers-vb-live/>.
-  Amazon Web Services 2021, Amazon gamelift pricing, Amazon, viewed 11 October 2021, <https://aws.amazon.com/gamelift/pricing/>.
-  Amazon Web Services 2021, Amazon gamelift faq, Amazon, viewed 11 October 2021, <https://aws.amazon.com/gamelift/faq>.
-  Amazon Web Services 2021, Choosing computing resources, Amazon, viewed 11 October 2021, <https://docs.aws.amazon.com/gamelift/latest/developerguide/gamelift-ec2-instances.html>.
-  Atavism 2021, Atavism features overview, Atavism, viewed 11 October 2021, <https://www.atavismonline.com/#featuresoverview>.
-  Atavism 2021, Licensing, Atavism, viewed 11 October 2021, <https://www.atavismonline.com/licensing>.
-  Auroch Digital 2021, How much does it cost to make a game?, Auroch Digital, viewed 11 October 2021, <https://www.aurochdigital.com/blog/2021/8/19/how-much-does-it-cost-to-make-a-game>.
-  Cloudflare 2021, What is bot management?, Cloudflare, viewed 11 October 2021, <https://www.cloudflare.com/en-au/learning/bots/what-is-bot-management/>.
-  Cloudflare 2021, What is Identity-as-a-Service (IDaaS)?, Cloudflare, viewed 11 October 2021, <https://www.cloudflare.com/en-au/learning/access-management/what-is-identity-as-a-service/>.
-  Epic Games 2021, Unreal Engine 4.27 Documentation – Programming and Scripting, Epic Games, viewed 18 September 2021, <https://docs.unrealengine.com/4.27/en-US/ProgrammingAndScripting/>.
-  Epic Games 2021, Unreal engine 4.27 documentation – hardware and software specifications, Epic Games, viewed 19 September 2021,<br>
-   <https://docs.unrealengine.com/4.27/en-US/Basics/InstallingUnrealEngine/RecommendedSpecifications/>.
-  IGDA 2020, Skills you need to start a career in the game development industry, IGDA, viewed 19 September 2021,<br>
-   <https://igda.org/news-archive/skills-you-need-to-start-a-career-in-the-game-development-industry/>.
-  IronSource n.d., Advertising (ad) revenue: what is ad revenue and how does it work?, IronSource, viewed 11 October 2021, <https://www.is.com/glossary/ad-revenue/>.
-  IronSource n.d., Glossary: eCPM – effective cost per mille (thousand), IronSource, viewed 11 October 2021, <https://www.is.com/glossary/ecpm/>.
-  IronSource n.d., Interstitial ads: mobile, ad revenue & interstitial video, IronSource, viewed 11 October 2021, <https://www.is.com/interstitial-ads/ >.
-  IronSource n.d., Offerwall, IronSource, viewed 11 October 2021, <https://www.is.com/offerwall/>.
-  Juppiomenz 2017, Bit Heroes, Kongregate, viewed 11 October 2021, <https://store.steampowered.com/app/666860/Bit_Heroes/>.
-  Leung, H-P 2017, Protect multiplayer game servers from DDoS attacks using Amazon GameLift, viewed 11 October 2021,<br>
-   <https://aws.amazon.com/blogs/gametech/protect-multiplayer-game-servers-from-ddos-attacks-using-amazon-gamelift-2/>.
-  NGINX n.d., What is load balancing?, F5 Networks Inc, viewed 11 October 2021, <https://www.nginx.com/resources/glossary/load-balancing/>.
-  O'Connor, P 2020, The craft and science of game design : a video game designer's manual, Taylor & Francis Group, Milton Park, UK.
-  OWASP 2021, M9: reverse engineering, OWASP, viewed 11 October 2021, <https://owasp.org/www-project-mobile-top-10/2016-risks/m9-reverse-engineering>.
-  Unity Technologies 2021, Documentation, version 2020.3 – scripting, Unity Technologies, viewed 18 September 2021, <https://docs.unity3d.com/Manual/ScriptingSection.html>.
-  Unity Technologies 2021, Documentation, version 2020.3 – system requirements, Unity Technologies, viewed 19 September 2021, <https://docs.unity3d.com/Manual/system-requirements.html>.
-  YoYo Games 2021, GameMaker Studio 2 manual – GameMaker language index, YoYo Games, viewed 18 September 2021, <https://manual.yoyogames.com/#t=GameMaker_Language%2FGameMaker_Language_Index.htm>.
-  YoYo Games 2021, GameMaker Studio 2 – system requirements, YoYo Games, viewed 18 September 2021, <https://www.yoyogames.com/en/get#sysreq>.
-  YoYo Games 2021, GMS2 required SDKs, YoYo Games, viewed 19 September 2021, <https://help.yoyogames.com/hc/en-us/articles/227860547-GMS2-Required-SDKs>.
+    <ul>
+      <li>Akamai 2019, The 4 number-one ways to protect your game from hackers, Venture Beat, viewed 11 October 2021 <br>
+       <https://venturebeat.com/2019/10/29/the-4-number-one-ways-to-protect-your-game-from-hackers-vb-live/>.</li>
+      <li>Amazon Web Services 2021, Amazon gamelift pricing, Amazon, viewed 11 October 2021, <https://aws.amazon.com/gamelift/pricing/>.</li>
+      <li>Amazon Web Services 2021, Amazon gamelift faq, Amazon, viewed 11 October 2021, <https://aws.amazon.com/gamelift/faq>.</li>
+      <li>Amazon Web Services 2021, Choosing computing resources, Amazon, viewed 11 October 2021, <https://docs.aws.amazon.com/gamelift/latest/developerguide/gamelift-ec2-instances.html>.</li>
+      <li>Atavism 2021, Atavism features overview, Atavism, viewed 11 October 2021, <https://www.atavismonline.com/#featuresoverview>.</li>
+      <li>Atavism 2021, Licensing, Atavism, viewed 11 October 2021, <https://www.atavismonline.com/licensing>.</li>
+      <li>Auroch Digital 2021, How much does it cost to make a game?, Auroch Digital, viewed 11 October 2021, <https://www.aurochdigital.com/blog/2021/8/19/how-much-does-it-cost-to-make-a-game>.</li>
+      <li>Cloudflare 2021, What is bot management?, Cloudflare, viewed 11 October 2021, <https://www.cloudflare.com/en-au/learning/bots/what-is-bot-management/>.</li>
+      <li>Cloudflare 2021, What is Identity-as-a-Service (IDaaS)?, Cloudflare, viewed 11 October 2021, <https://www.cloudflare.com/en-au/learning/access-management/what-is-identity-as-a-service/>.</li>
+      <li>Epic Games 2021, Unreal Engine 4.27 Documentation – Programming and Scripting, Epic Games, viewed 18 September 2021, <https://docs.unrealengine.com/4.27/en-US/ProgrammingAndScripting/>.</li>
+      <li>Epic Games 2021, Unreal engine 4.27 documentation – hardware and software specifications, Epic Games, viewed 19 September 2021,<br>
+       <https://docs.unrealengine.com/4.27/en-US/Basics/InstallingUnrealEngine/RecommendedSpecifications/>.</li>
+      <li>IGDA 2020, Skills you need to start a career in the game development industry, IGDA, viewed 19 September 2021,<br>
+       <https://igda.org/news-archive/skills-you-need-to-start-a-career-in-the-game-development-industry/>.</li>
+      <li>IronSource n.d., Advertising (ad) revenue: what is ad revenue and how does it work?, IronSource, viewed 11 October 2021, <https://www.is.com/glossary/ad-revenue/>.</li>
+      <li>IronSource n.d., Glossary: eCPM – effective cost per mille (thousand), IronSource, viewed 11 October 2021, <https://www.is.com/glossary/ecpm/>.</li>
+      <li>IronSource n.d., Interstitial ads: mobile, ad revenue & interstitial video, IronSource, viewed 11 October 2021, <https://www.is.com/interstitial-ads/>.</li>
+      <li>IronSource n.d., Offerwall, IronSource, viewed 11 October 2021, <https://www.is.com/offerwall/>.</li>
+      <li>Juppiomenz 2017, Bit Heroes, Kongregate, viewed 11 October 2021, <https://store.steampowered.com/app/666860/Bit_Heroes/>.</li>
+      <li>Leung, H-P 2017, Protect multiplayer game servers from DDoS attacks using Amazon GameLift, viewed 11 October 2021,<br>
+       <https://aws.amazon.com/blogs/gametech/protect-multiplayer-game-servers-from-ddos-attacks-using-amazon-gamelift-2/>.</li>
+      <li>NGINX n.d., What is load balancing?, F5 Networks Inc, viewed 11 October 2021, <https://www.nginx.com/resources/glossary/load-balancing/>.</li>
+      <li>O'Connor, P 2020, The craft and science of game design : a video game designer's manual, Taylor & Francis Group, Milton Park, UK.
+      <li>OWASP 2021, M9: reverse engineering, OWASP, viewed 11 October 2021, <https://owasp.org/www-project-mobile-top-10/2016-risks/m9-reverse-engineering>.</li>
+      <li>Unity Technologies 2021, Documentation, version 2020.3 – scripting, Unity Technologies, viewed 18 September 2021, <https://docs.unity3d.com/Manual/ScriptingSection.html>.</li>
+      <li>Unity Technologies 2021, Documentation, version 2020.3 – system requirements, Unity Technologies, viewed 19 September 2021, <https://docs.unity3d.com/Manual/system-requirements.html>.</li>
+      <li>YoYo Games 2021, GameMaker Studio 2 manual – GameMaker language index, YoYo Games, viewed 18 September 2021, <https://manual.yoyogames.com/#t=GameMaker_Language%2FGameMaker_Language_Index.htm>.</li>
+      <li>YoYo Games 2021, GameMaker Studio 2 – system requirements, YoYo Games, viewed 18 September 2021, <https://www.yoyogames.com/en/get#sysreq>.</li>
+      <li>YoYo Games 2021, GMS2 required SDKs, YoYo Games, viewed 19 September 2021, <https://help.yoyogames.com/hc/en-us/articles/227860547-GMS2-Required-SDKs>.</li>
+    </ul>
+
   </p>
 
 </div>
