--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <style media="screen">
 body {background-color: Gainsboro;}
 div {
-  text-align: center;
+  text-align: left;
   margin-left: : 50px;
   width: auto;
 }
