--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ div {
       reluctant to stay in one place too long.<p>
     <h3>Personality Max Learning Styles</h3>
     <p>Primary Learning Style: Primarily Visual, Then Auditory, then Kinesthetic</p>
-    <h3>Big5 Personality Test</h3>
+    <h3>Big Five Personality Test</h3>
     <p>Most common traits: Agreeableness, Conscientiousness, Openness to new experience</p>
     <br>
 
